# names-changer

./: .gitignore  Cargo.toml  README.md  test.txt
benches/: bench.rs
src/: lib.rs  names_changer.rs  temp.rs
tests/: module.rs
