[package]
name = "names-changer"
version = "0.1.0"
authors = ["I_Nosovskiy <mananaxep@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mnnxp/names-changer"
documentation = "https://docs.rs/names-changer"
description = """
Convert a names of sql schemes from camelcase to snake case.
"""
keywords = ["text", "name", "changer", "parser"]
categories = ["algorithms", "Text processing", "SQL", "Parsing tools"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
case = "1.0.0"
