[package]
name = "names-changer"
version = "0.2.0"
authors = ["I_Nosovskiy <mananaxep@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mnnxp/names-changer"
documentation = "https://docs.rs/names-changer"
description = """
Convert a names of sql schemes from camelcase to snake case.
"""
keywords = ["text", "name", "changer", "parser"]
categories = ["text-processing", "data-structures", "parser-implementations"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
heck = "0.3.2"
